--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="food"
+            type="gr.aytn.foodapp.data.model.Food" />
+        <variable
+            name="count"
+            type="Integer" />
+        <variable
+            name="detailFragment"
+            type="gr.aytn.foodapp.ui.fragment.DetailFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +41,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/quicksand"
-            android:text="Chicken"
+            android:text="@{food.name}"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -47,7 +55,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/quicksand"
-            android:text="6 $"
+            android:text='@{food.price+" $"}'
             android:textColor="@color/main_green"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -61,7 +69,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/quicksand"
-            android:text="Category: Meals"
+            android:text='@{"Category: " + food.category}'
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/foodDetailName" />
@@ -72,10 +80,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="32dp"
             android:background="@drawable/card_drawable"
             android:fontFamily="@font/quicksand"
-            android:text="Add to Cart"
+            android:onClick="@{() -> detailFragment.addToBasketBtnClick(food)}"
+            android:text='@{"Add to Cart - " + count*food.price + " $"}'
             android:textColor="@color/gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +97,7 @@
             android:layout_height="30dp"
             android:layout_marginTop="55dp"
             android:layout_marginEnd="4dp"
+            android:onClick="@{() -> detailFragment.decrementBtnClick()}"
             android:background="@drawable/decrement_drawable"
             app:backgroundTint="@null"
             app:icon="@drawable/minus"
@@ -102,6 +112,7 @@
             android:layout_height="30dp"
             android:layout_marginTop="55dp"
             android:layout_marginEnd="24dp"
+            android:onClick="@{() -> detailFragment.incrementBtnClick()}"
             android:background="@drawable/increment_drawable"
             app:backgroundTint="@null"
             app:icon="@drawable/plus"
@@ -116,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="54dp"
             android:layout_marginEnd="12dp"
-            android:text="0"
+            android:text="@{count.toString()}"
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@+id/btnDecrementOrder"
