--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,12 @@
 
     <data>
         <variable
+            name="spinnerAdapter"
+            type="android.widget.ArrayAdapter" />
+        <variable
+            name="listener"
+            type="android.widget.AdapterView.OnItemSelectedListener" />
+        <variable
             name="adapter"
             type="gr.aytn.foodapp.ui.adapter.FoodAdapter" />
     </data>
@@ -115,6 +121,7 @@
             android:layout_height="32dp"
             android:layout_marginTop="95dp"
             android:layout_marginEnd="16dp"
+            android:adapter="@{spinnerAdapter}"
             android:background="@drawable/filter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
